syntax = "proto3";

package rest;
option go_package = "github.com/savageking-io/ogbrest/proto";

import "google/protobuf/timestamp.proto";

service RestInterService {
  rpc AuthInterService (rest.AuthenticateServiceRequest) returns (rest.AuthenticateServiceResponse);
  rpc RequestRestData (rest.RestDataRequest) returns (rest.RestDataDefinition);
  rpc NewRestRequest (rest.RestApiRequest) returns (rest.RestApiResponse);
  rpc Ping (rest.PingMessage) returns (rest.PingMessage);
}

message AuthenticateServiceRequest {
  string token = 1;
}

message AuthenticateServiceResponse {
  int32 code = 1;
  string error = 2;
}

message RestDataRequest {
  int32 version = 1;
}

message RestDataDefinition {
  int32 code = 1;
  string error = 2;
  string root = 3;
  int32 endpoints_num = 4;
  repeated RestEndpoint endpoints = 5;
  string version = 6;
}

message RestEndpoint {
  string path = 1;
  string method = 2;
  bool skip_auth_middleware = 3;
}

message RestApiRequest {
  string Uri = 1;
  string Method = 2;
  repeated RestHeader Headers = 3;
  string Body = 4;
  string Source = 5;
  repeated RestApiFormData Form = 6;
}

message RestApiFormData {
  string key = 1;
  repeated string value = 2;
}

message RestApiResponse {
  int32 Code = 1;
  string Error = 2;
  int32 HttpCode = 3;
  repeated RestHeader Headers = 4;
  string Body = 5;
}

message RestHeader {
  string key = 1;
  string value = 2;
}

message PingMessage {
  google.protobuf.Timestamp SentAt = 1;
  google.protobuf.Timestamp RepliedAt = 2;
}